--- a/NZMJ_v2.tex
+++ b/NZMJ_v2.tex
@@ -20,15 +20,15 @@
 
 \section{Introduction}
 
-This paper describes the development of "RenalQ". This is an autonomous decision support tool that provides clinicians with patient management suggestions for their consideration.\\
+This paper describes the development of an autonomous decision support tool for the interpretation of renal function tests. The tool provides clinicians with suggestions about the further management of a patient's test results. These suggestions are designed to be patient and context specific. The motivations behind the development of this application were to improve the quality of care patients that experience and to support the General Practitioner teams to manage the volume of results they receive on a daily basis. \\
 
-There were two motivations behind RenalQ's development. The first was the discovery of an instance where a newly abnormal renal function result, in a patient who was acutely unwell. The result had been seen but the interpretation did not seem to include the clinical context in which the test was requested or the patient's previous results. Despite the result being highly significant, the report did not generate any action until the patient represented several weeks later, stating they still felt unwell.\\ 
+An example was the discovery of an instance where a newly abnormal renal function result, in a patient who was acutely unwell. An experienced and caring physician had reviewed the latest renal function test result, making a clinical entry as the result's normality. This interpretation of the result did not seem to include the clinical context in which the test was requested or the patient's previous renal function test results. Despite the result being highly significant, the report did not generate any action until the patient represented several weeks later, stating that the patient informed the practice that they still felt unwell. Fortunately, this case ended well for the patient.\\ 
 
-For any patient or condition, this is greatly concerning. Particularly with regards to renal disease, misinterpretation of test results is not uncommon. This rate of missed test results is of especial concern with regards to renal disease. One study reported that American primary care physicians spent 74 minutes per day reviewing results. Despite which 81\% reported delays in managing results and only 41\% of clinicians were satisfied with their current process \citep{poon2004wish}. Estimates of "missed" or not followed up results vary from 6.8\% to 62\% \citep{callen2012failure}.\\
+For any patient or condition, this is concerning but not uncommon, especially with regards to renal function test results.  As early management can change clinical outcomes, any missed test results are of concern. One study reported that American primary care physicians spent 74 minutes per day reviewing results. Despite which 81\% reported delays in managing results and only 41\% of clinicians were satisfied with their current process \citep{poon2004wish}. Estimates of "missed" or not followed up results vary from 6.8\% to 62\% \citep{callen2012failure}.\\
 
-The other motivation was the rising incidence of chronic renal disease and the associated costs to society. The estimated Canadian prevalence of chronic renal disease in 2007-2009 was 12.5\% with 3.1\% of the population have grade 3-5 disease \citep{arora2013prevalence}. \citep{anachronistic}, described how despite the rising significance of renal disease worldwide, practitioner awareness remains low. These authors argued that care would need to be lead by primary care and integrated into general chronic condition management to avoid the "catastrophic" costs associated with the management of advanced chronic renal disease management \citep{jha2013chronic}. Kerr et al., estimated the cost of renal disease at 1.44-1-45 billion Pound Stirling in 2009-2010 for the UK alone \citep{underestimating}.\\
+Another motivation was the rising incidence of chronic renal disease and the associated costs to society. The estimated Canadian prevalence of chronic renal disease in 2007-2009 was 12.5\% with 3.1\% of the population has grade 3-5 disease \citep{arora2013prevalence}. \citep{anachronistic}, described how despite the rising significance of renal disease worldwide, practitioner awareness remains low. These authors argued that care would need to be lead by primary care and integrated into general chronic condition management to avoid the "catastrophic" costs associated with the management of advanced chronic renal disease management \citep{jha2013chronic}. Kerr et al. estimated the cost of renal disease at 1.44-1-45 billion Pound Stirling in 2009-2010 for the UK alone \citep{underestimating}.\\
 
-This paper will outline the development and implementation of the "RenalQ" application. The aim was to support the proactive management of renal disease by primary care clinicians. The methodology will describe how the application operated across the DHB but was able to consider each individual patient in their own context.  The application was described by users as making a positive change to their work processes and many would like the methodology expanded to other tests. The analysis of RenalQ's impact on clinician behaviour, found a statistically significant impact on their laboratory testing of renal disease.\\
+This paper will outline the development and implementation of the application. "RenalQ" was the final code name given to the product. The aim was to support the proactive management of renal disease by primary care clinicians. The methodology will describe how the application operated across the DHB but was able to consider each patient within their context.  Users described the application as making a positive change to their work processes, and many would like the methodology expanded to other tests. RenalQ was found to have a statistically significant impact on practitioner's' laboratory testing of renal disease, following its introduction.\\
 
 \section{Method}
 
