1st edit method section

--- a/NZMJ_v2.tex
+++ b/NZMJ_v2.tex
@@ -31,10 +31,9 @@ Another motivation was the rising incidence of chronic renal disease and the ass
 This paper will outline the development and implementation of the application. "RenalQ" was the final code name given to the product. The aim was to support the proactive management of renal disease by primary care clinicians. The methodology will describe how the application operated across the DHB but was able to consider each patient within their context.  Users described the application as making a positive change to their work processes, and many would like the methodology expanded to other tests. RenalQ was found to have a statistically significant impact on practitioner's' laboratory testing of renal disease, following its introduction.\\
 
 \section{Method}
+Ensuring patient safety at all times drove all design decisions in the development of RenalQ. Compared to the clinician, RenalQ only ever has access to a subset of the total dataset about a patient. Information that is not accessible to the application may well have a significant impact on the clinician's further management plans. Therefore, the clinician was to remain responsible for the final determination of further care of the patient.   The decision for the clinician to be the final arbitrator also acknowledges the possibility of error with an application like RenalQ during its development phase. \\
 
-In the development of the RenalQ application a number of design decisions were made. It was decided that the RenalQ application would only provide decision support to the ultimately responsible clinician. This decision was entirely focused on patient safety. Compared to the treating clinician a decision support tool has access to only a finite subset of the total data set about a given patient which is available to the treating clinician. Information not available to the application may have significant and legitimate impact on the clinician's treatment decision.  The decision for the clinician to be the final arbitrator also acknowledges the possibility of error with a new developmental decision support application like "RenalQ". \\
-
-The decision was also made to adopt industrial production methodology which has used statistical process control (SPC) as part of "business production management" \citep{rosemann2015six, cheng2015run, epprecht2015statistical}. This enabled the application to function at district scale, yet also be robust enough to consider the individual patient's needs. Within Health SPC has already been used to consider the operational function of emergency departments \citep{pimentel2015statistical} and the widest adoption of SPC in health has been within the field of quality improvement \citep{provost2011health}.\\
+The decision was also made to adopt modern production methodology which has used statistical process control (SPC) as part of "production business management" \citep{rosemann2015six, cheng2015run, epprecht2015statistical}. Adoption of SPC enabled RenalQ to function at the necessary scale to operate within a DHB's laboratory services. Also, be able to consider the individual patient's needs. In health SPC has already been used to study the operational function of emergency departments \citep{pimentel2015statistical} and the widest adoption of SPC in health has been within the field of quality improvement \citep{provost2011health}.\\
 
 The resulting application is described in detail elsewhere\citep{GodfreyEtAl2014KidneyPaper}. In essence RenalQ interprets the eGFR result for each patient, within the context of their previous eGFR results. In the laboratory work flows, RenalQ is executed only after the usual renal function tests have been performed and assuming it is appropriate to calculate the eGFR has been calculated by the usual laboratory processes. If the patient is deemed to be acutely unwell, the eGFR algorithm is not applicable and so neither it or RenalQ is executed.\\
 
