--- a/NZMJ_v2.tex
+++ b/NZMJ_v2.tex
@@ -35,13 +35,15 @@ Ensuring patient safety at all times drove all design decisions in the developme
 
 The decision was also made to adopt modern production methodology which has used statistical process control (SPC) as part of "production business management" \citep{rosemann2015six, cheng2015run, epprecht2015statistical}. Adoption of SPC enabled RenalQ to function at the necessary scale to operate within a DHB's laboratory services. Also, be able to consider the individual patient's needs. In health SPC has already been used to study the operational function of emergency departments \citep{pimentel2015statistical} and the widest adoption of SPC in health has been within the field of quality improvement \citep{provost2011health}.\\
 
-The resulting application is described in detail elsewhere\citep{GodfreyEtAl2014KidneyPaper}. In essence RenalQ interprets the eGFR result for each patient, within the context of their previous eGFR results. In the laboratory work flows, RenalQ is executed only after the usual renal function tests have been performed and assuming it is appropriate to calculate the eGFR has been calculated by the usual laboratory processes. If the patient is deemed to be acutely unwell, the eGFR algorithm is not applicable and so neither it or RenalQ is executed.\\
+Described elsewhere, is the technical description of the application and its development\citep{GodfreyEtAl2014KidneyPaper}. In essence, RenalQ interprets the eGFR result for each patient, within the context of their previous eGFR results. In the laboratory workflows, RenalQ is executed after the usual renal function tests. In any circumstances where it is inappropriate for the eGFR not to be calculated, RenalQ is not executed either. \\
 
-The RenalQ interpretation engine consists of three layers depending on the number of eGFR results available within the laboratory database. If the patient has less than five results no specific advice is given. Between 5-19 results the eGFR is interpreted by a set of fixed heuristics rules. These encode standard clinical practice, but with two bias being introduced. The first bias is that result returned by the application to the treating clinician would be clinically conservative and encourage clinician to be proactive in their care of the patient. The second bias introduced was that RenalQ encouraged further testing to improve its own accuracy. The first bias is aimed to provide clinical safety. We accepted that it might be unnecessarily alarmist on occasions but in the balance between irritating users against maintaining patient safety, the decision was made to prioritize patient safety. The third layer in RenalQ applied for patients in whom 20 or more test results were available and used SPC to provide an interpretation. This layer used cumulative summation as the SPC methodology to determine changes in the recent past away from the historic usual pattern for this particular patient. On the basis of the rate of change interpretations and suggestions were developed. The second layer in the interpretation engine was found to be critically important for the ability of RenalQ to reliably detect acute renal failure. This rule was called the "plummet" rule for the rate of deterioration in the eGFR from previous levels for obvious reasons. \\
+The RenalQ interpretation engine consists of three layers depending on the number of eGFR results available within the laboratory database. If there are less than five results available, no specific advice is given by RenalQ. If there are between 5-19 results available, the context of the latest eGFR result is interpreted by a set of fixed heuristics rules. These rules encode current standard clinical practice. As a safeguard, any result returned by the application to the treating clinician would be clinically conservative and encourage clinician to be proactive in their care of the patient. Prioritized was patient safety but this meant accepting RenalQ might occasionally be unnecessarily alarmist in its interpretations. The third layer in RenalQ interpretation engine was for patients where more than 20 or more test results were available for SPC to provide an analysis. This third layer used cumulative summation as the SPC methodology to determine changes between the current eGFR result and previous results. From this result, RenalQ develops recommendations for the clinician.  
 
-There was a body of work beyond the scope of this practice around integration of the RenalQ application into the laboratory computer systems. There was a degree of technical complexity required to resolve transfer of data between the laboratory systems and RenalQ, then for the RenalQ interpretations to be made available to Primary Care within the usual results of the renal function tests. Like all such technical exercises, a lot of work was required to make it look like nothing special had occurred. \\
+During development of RenalQ, the second layer was found to be essential for the ability of RenalQ to reliably detect acute renal failure. This rule was called the "plummet" rule for obvious reasons given the rate of deterioration in the eGFR from previous levels. \\
 
-Once the application was operationally ready for evaluation by primary care providers, ethical approval for the trial to proceed gained from the Hospital and Community Clinical Boards. \\
+Before the pilot study of the RenalQ's functionality in clinical practice, considerable work was required to integrate the application into the laboratory systems. The technical complexities were in transferring data between the laboratory systems and RenalQ,  and then for the analysis results to be returned to the Laboratory systems.  The returned RenalQ results were then integrated into the standard renal function tests results for return to the clinician and retention in the patient's clinical records. \\
+
+Once the application was operationally ready for evaluation by primary care, ethical approval for the trial to proceed was then gained from the MidCentral and Central PHO clinical boards. \\
 
 \section{Evaluation}
 
