Evaluation edit up to qualitative

--- a/NZMJ_v2.tex
+++ b/NZMJ_v2.tex
@@ -46,14 +46,12 @@ Before the pilot study of the RenalQ's functionality in clinical practice, consi
 Once the application was operationally ready for evaluation by primary care, ethical approval for the trial to proceed was then gained from the MidCentral and Central PHO clinical boards. \\
 
 \section{Evaluation}
+Pre-deployment the focus of evaluation was on the optimization of the interpretation engine. The laboratory provided a series of progressively larger cohorts of deidentified historic renal function results. RenalQ's and usual clinical analyses were compared o evaluate the potential of RenalQ and optimize its interpretation engine.  Initially, numerous improvements to the algorithm were required, particularly around the identification of acute renal impairment. \\
 
-Evaluating RenalQ was performed iteratively through three phases. The first phase was pre-deployment where the evaluation was focused on optimizing of the interpretation engine. A series of progressively larger samples of deidentified historic renal function results was obtained from the laboratory. The suggestions from RenalQ were manually compared to the interpretations of an experienced clinician. Initially frequent improvements to the algorithm were required, particularly around the identification of acute renal impairment. 
+Once the algorithm was optimized, sensitivity was over 99\% specificity was over 98\%. This high level of sensitivity and specificity created problems. It was easy to slip into the trap during this phase of the evaluation that because RenalQ was usually accurate, it became the source of truth for evaluation. The question of RenalQ's accuracy became quickly begged! As a safeguard, the results of RenalQ were reviewed by the local renal physicians to ensure selectivity and specificity were progressively optimised. As a group, they were comfortable with the interpretations provided by RenalQ as being safe and appropriate for a pilot study. As part of the pilot studies, RenalQ's was evaluated qualitatively and quantitatively. \\
 
-Once the algorithm was adjusted, it became clear that sensitivity was over 99\% specificity was over 98\%. this high level of sensitivity and specificity created its own problems. It was easy to slip into the trap during this phase of the evaluation that because RenalQ was usually accurate, it became the source of truth for its own evaluation. The question of RenalQ's accuracy became quickly begged! To balance this tendency, the results of RenalQ were reviewed by the local renal physicians to ensure selectivity and specificity were progressively optimised. As a group they were comfortable with the interpretations provided by RenalQ as being safe and appropriate for a pilot study. \\ 
-
-The third phase of RenalQ's evaluation was both qualitative and quantitative. The qualitative evaluation was performed during the limited pilot study and through into the initial period following the launch of the application into an extended pilot. 
-
-A semi-structured responsive interview instrument was used as this was seen as an ideal way to allow primary care staff to reflect on their experiences with RenalQ allowing them to provide in-depth feedback. In a responsive interview the emphasis is on the fact that the interviewer and interviewee are both people and that they form a relationship during the interview \citep{rubin2011qualitative}. Additionally, the research design is able to remain flexible throughout the project meaning that if new information, or a new area of interest, is uncovered then the current interview, and subsequent interviews, can probe this area. It allows the concept of ‘we don’t know everything’ to be included in the research design.\\
+\subsection{Qualitative evaluation}
+We used a semi-structured sensitive interview instrument to allow primary care staff to both reflect on their experiences with RenalQ and enabling them to provide in-depth feedback. In the "responsive interview" paradigm, the emphasis is on the fact that the interviewer and interviewee are both people and that they form a relationship during the interview \citep{rubin2011qualitative}. Additionally, the research design can remain flexible throughout the project meaning that if new information, or a new area of interest, is uncovered then the current interview, and subsequent interviews, can probe this area. \\
 
 Validity concerns the "believability" of a statement and is a characteristic given to a claim by those to whom the claim is addressed. Validity in qualitative research is seen as an activity that is conducted throughout the research process \citep{morse2002verification, kvale2009interviews} to convince readers of the likelihood that the support for the claim is strong enough to serve as a basis for understanding \citep{polkinghorne2007validity}. Throughout the process it was the views of primary care staff that were sought, listened to, and clarified where meaning was not understood. The result of the process is that the research reflects the primary care view of RenalQ and not that of the researcher.\\
 
