Quantitative evaluation edited

--- a/NZMJ_v2.tex
+++ b/NZMJ_v2.tex
@@ -50,7 +50,7 @@ Pre-deployment the focus of evaluation was on the optimization of the interpreta
 
 Once the algorithm was optimized, sensitivity was over 99\% specificity was over 98\%. This high level of sensitivity and specificity created problems. It was easy to slip into the trap during this phase of the evaluation that because RenalQ was usually accurate, it became the source of truth for evaluation. The question of RenalQ's accuracy became quickly begged! As a safeguard, the results of RenalQ were reviewed by the local renal physicians to ensure selectivity and specificity were progressively optimised. As a group, they were comfortable with the interpretations provided by RenalQ as being safe and appropriate for a pilot study. As part of the pilot studies, RenalQ's was evaluated qualitatively and quantitatively. \\
 
-\subsection{Qualitative evaluation}
+\subsection{Qualitative results}
 We used a semi-structured sensitive interview instrument to allow primary care staff to both reflect on their experiences with RenalQ and enabling them to provide in-depth feedback. In the "responsive interview" paradigm, the emphasis is on the fact that the interviewer and interviewee are both people and that they form a relationship during the interview \citep{rubin2011qualitative}. Additionally, the research design can remain flexible throughout the project meaning that if new information, or a new area of interest, is uncovered then the current interview, and subsequent interviews, can probe this area. \\
 
 Validity concerns the "believability" of a statement and is a characteristic given to a claim by those to whom the claim is addressed. Validity in qualitative research is seen as an activity that is conducted throughout the research process \citep{morse2002verification, kvale2009interviews} to convince readers of the likelihood that the support for the claim is strong enough to serve as a basis for understanding \citep{polkinghorne2007validity}. Throughout the process it was the views of primary care staff that were sought, listened to, and clarified where meaning was not understood. The result of the process is that the research reflects the primary care view of RenalQ and not that of the researcher.\\
@@ -65,6 +65,9 @@ The General Practitioners felt the RenalQ process should be applied to outpatien
 
 We limit our investigation of the total amount of testing being conducted to the last 39 months from January 2013 to March 2016.\\
 
+\subsection{Quantitative results}
+On release of RenalQ into district wide pilot, utilization data became available. The principle measures analysised where the frequency of testing and the elpased time to the next test against the eGFR result.\\
+
 \begin{figure}[htp]
 \centering
 \includegraphics[scale=0.50]{Fig1.png}
@@ -72,7 +75,7 @@ We limit our investigation of the total amount of testing being conducted to the
 \label{}
 \end{figure}
 
-There is a (perhaps not so obvious) pattern in this data to draw to the reader's attention. It seems both a seasonal effect over the months within a year, and a general increase over years should be noted.  Our belief in this notion is supported by use of an Analysis of Variance (ANOVA) procedure. \\
+Of note, it seems to be both a seasonal effect over the months within a year, and a general increase over years.  The use of an Analysis of Variance (ANOVA) procedure supports this interpretation of the results.\\
 
 \begin{figure}[htp]
 \centering
@@ -81,7 +84,7 @@ There is a (perhaps not so obvious) pattern in this data to draw to the reader's
 \label{}
 \end{figure}
 
-The above table (figure 2) shows that the impact of year can be summarised as a straight line effect, while we have a cyclic pattern over the months. Any departure from this would constitute an unusual increase in total workload since the introduction of RenalQ. We use a standard control chart for individuals to search for unusual results. The control limits on the plot are calculated using the data from before the introduction of RenalQ and are at two (shown in orange) and three (shown in red) standard deviations from the centre line (see figure 3).\\
+The above table (figure 2) shows that the impact of year can be summarised as a straight line effect, while we have a cyclic pattern over the months. Any departure from this would constitute an unusual increase in total workload since the introduction of RenalQ. We use a standard control chart for individuals to search for exceptional results. The control limits on the plot are calculated using the data from before the introduction of RenalQ and are at two (shown in orange) and three (shown in red) standard deviations from the centre line (see figure 3).\\
 
 \begin{figure}[htp]
 \centering
@@ -90,9 +93,9 @@ The above table (figure 2) shows that the impact of year can be summarised as a 
 \label{}
 \end{figure}
 
-There are no serious  departures (outside three standard deviation limits) from what could be expected in terms of the total number of tests being conducted. We do need to condition this assessment on our concern that the totality of tests has not been provided for earlier years of this investigation. This aspect of this report can be re-created once the reliability of the complete data can be established.\\
+There are no serious departures (outside three standard deviation limits) from the expected for the volume of the renal function tests performed. We do need to condition this assessment on our concern that the totality of test volumes has not been provided for earlier years of this investigation. \\
 
-Even though the total number of tests is growing, it is worth seeing if the mix of tests is changing at all. We have used a $\chi^2$ test to see if the counts of tests yielding different eGFR values is changing over time. The eGFR values have been put into five categories using cut-offs of 15, 30, 60, and 90\\
+Even though the total number of tests is growing, it is worth seeing if the mix of tests is changing at all. We have used a $\chi^2$ test to see if the counts of tests yielding different eGFR values is changing over time. The eGFR values have been put into five categories using cut-offs of 15, 30, 60, and 90.\\
 
 \begin{figure}[htp]
 \centering
@@ -112,7 +115,7 @@ The test has a $\chi^2$ value of 3175.89 (p=0, df=152) which means there is a ch
 
 It is difficult to see any growth in the number of tests being conducted for patients whose eGFR is between 60 and 90 (shown in blue) and above 90 (shown in green). The patient groups of greatest interest are those with eGFR between 30 and 60 (shown in orange) and between 15 and 30 (shown in red).\\
 
-In the following analysis, the data for 2013 has been added back in and we have evaluated every value of eGFR instead of grouped eGFR values.The next  model  used to identify the statistically significant factors affecting the time between successive renal function tests allows for only the level of renal function for each patient (as measured by their eGFR), and whether that test was analyzed using the RenalQ system. In addition, the combination of these two effects has also been incorporated in the model. The regression model for this model yields  the following summary of effects and their statistical significance. \\
+In the following analysis, the data for 2013 has been added back in and we have evaluated every value of eGFR instead of grouped eGFR values.The next  model  used to identify the statistically significant factors affecting the time between successive renal function tests allows for only the level of renal function for each patient (as measured by their eGFR), and whether that test was analyzed using the RenalQ system. In addition, the combination of these two effects has also been incorporated in the model. The regression model for this model yields  the following summary of effects and their statistical significance. These show that there has been a statistically significant reduction in the time of next test for patients with serious renal impairment, of sufficent magnitude a logrithmic scale is required to visualise the effect.\\
 
 \begin{figure}[htp]
 \centering
@@ -120,6 +123,8 @@ In the following analysis, the data for 2013 has been added back in and we have 
 \caption{}
 \label{}
 \end{figure}
+
+The pattern of change in time to next test is in accordance with our projections. We were expected the result of a decrease between tests for patients with serious renal impairment. The middle zone of mild renal impairment fulfilled our expectation of no change. Only time will tell if the expected increase in time between tests for those patients with mild or no renal impairment occurs. Given the time between tests in this group of patients is expected to be measured in years, it will be some time before if our hypothesis is confirmed. The clinical benefit of RenalQ is already established through the reduction or optimization between tests for those patients with moderate to severe renal impairment. Any financial benefit will only occur with reduction in testing frequency in thos with mild or no renal impairment.
 
 \section{Conclusions}
 The management of laboratory results in general and the management of renal disease are both significant issues. The combination of an aging population and an increasing incidence of predisposing illness such as diabetes means renal disease will become even more significant in the future. For the practitioner, renal function tests needs to be interpreted within the patient's context. The same result will mean different things in different patients. With time frames for chronic renal impairment being measured in months or years, losing contextual awareness of the significance and interpretation of any one result in a busy practice borders on the inevitable. Yet the consequences for both the patient and the affordability of health care is significant.\\
