Roger's section included

--- a/NZMJ_v2.tex
+++ b/NZMJ_v2.tex
@@ -51,19 +51,17 @@ Pre-deployment the focus of evaluation was on the optimization of the interpreta
 Once the algorithm was optimized, sensitivity was over 99\% specificity was over 98\%. This high level of sensitivity and specificity created problems. It was easy to slip into the trap during this phase of the evaluation that because RenalQ was usually accurate, it became the source of truth for evaluation. The question of RenalQ's accuracy became quickly begged! As a safeguard, the results of RenalQ were reviewed by the local renal physicians to ensure selectivity and specificity were progressively optimised. As a group, they were comfortable with the interpretations provided by RenalQ as being safe and appropriate for a pilot study. As part of the pilot studies, RenalQ's was evaluated qualitatively and quantitatively. \\
 
 \subsection{Qualitative results}
-We used a semi-structured sensitive interview instrument to allow primary care staff to both reflect on their experiences with RenalQ and enabling them to provide in-depth feedback. In the "responsive interview" paradigm, the emphasis is on the fact that the interviewer and interviewee are both people and that they form a relationship during the interview \citep{rubin2011qualitative}. Additionally, the research design can remain flexible throughout the project meaning that if new information, or a new area of interest, is uncovered then the current interview, and subsequent interviews, can probe this area. \\
-
-Validity concerns the "believability" of a statement and is a characteristic given to a claim by those to whom the claim is addressed. Validity in qualitative research is seen as an activity that is conducted throughout the research process \citep{morse2002verification, kvale2009interviews} to convince readers of the likelihood that the support for the claim is strong enough to serve as a basis for understanding \citep{polkinghorne2007validity}. Throughout the process it was the views of primary care staff that were sought, listened to, and clarified where meaning was not understood. The result of the process is that the research reflects the primary care view of RenalQ and not that of the researcher.\\
+A semi-structured interview instrument was selected as it allowed primary care staff to both reflect on their experiences with RenalQ and enabled them to provide in-depth feedback. In the "responsive interview" method, the emphasis is on the fact that the interviewer and interviewee are both people and that they form a relationship during the interview \citep{rubin2011qualitative}. Additionally, this method allows the research design to remain flexible meaning that if new information, or a new area of interest, is uncovered then the current interview, and subsequent interviews, can probe this area. \\
 
 A series of interviews of individual clinicians and groups were undertaken. Where interviews were conducted, the semi structured responsive interview process was followed. Where a large group was encountered the approach was altered into a focus group approach based on the semi-structured questions.\\
 
-At each event there was a clear message that RenalQ added value to general practice. Reflective comments from GP included - “don’t take it away” and a “really useful tool”. After only a relatively short period of time the GP interviewed appeared to place confidence on the RenalQ interpretation and this both “sharpened their practice” and “saved time”\\
+Validity in qualitative research is seen as an activity that is conducted throughout the research process \citep{morse2002verification, kvale2009interviews} to convince readers of the likelihood that the support for the claim is strong enough to serve as a basis for understanding \citep{polkinghorne2007validity}. Throughout the qualitative process it was the views of primary care staff that were sought, listened to, and clarified where meaning was not understood. The result of the process is that the research reflects the primary care view of RenalQ and not that of the researcher.\\
 
-RenalQ was felt to save time, in contrast to the fear it would increase GP workload. The GP perspective on this aspect was that the RenalQ interpretation provided an additional check giving them confidence in their proposed action. In part this was due to the believe that the sensitivity of RenalQ with respect to its interpretations was set correctly. Feedback received indicated that although RenalQ was seen as conservative in its interpretations, this was considered to be appropriate. In this regard the overall feeling was that the interpretation was seen as more reliable.\\
+At each interview or focus group there was a clear message that RenalQ added value to general practice. Reflective comments from General Practitioners included - “don’t take it away” and a “really useful tool”. The General Practitioners interviewed appeared to place confidence on the RenalQ interpretation and they reflected that this both “sharpened their practice” and “saved time”.\\
 
-The General Practitioners felt the RenalQ process should be applied to outpatient renal function tests from the hospital as well as community requested samples. This anomaly was due the laboratory deeming all hospital samples to be taken from patients not in their steady state, not just those acutely unwell. General Practitioners also requested the methodology be extended to other areas of laboratory result interpretation.
+The reflection of General Practitioners that RenalQ was felt to save time was in contrast with what was originally considered that it would increase General Practitioner workload. The General Practitioner perspective on this aspect was that the RenalQ interpretation provided an additional check giving them confidence in their proposed action. In part this was due to the believe that the sensitivity of RenalQ with respect to its interpretations was set conservatively and this was considered appropriate.\\
 
-We limit our investigation of the total amount of testing being conducted to the last 39 months from January 2013 to March 2016.\\
+In addition General Practitioners felt the RenalQ process could be applied to outpatient renal function tests from the hospital in addition to community requested samples. This anomaly is due the laboratory deeming all hospital samples to be taken from patients not in their steady state, not just those acutely unwell. General Practitioners also considered the statistical processes could be extended to other areas of laboratory result interpretation. \\
 
 \subsection{Quantitative results}
 On release of RenalQ into district wide pilot, utilization data became available. The principle measures analysised where the frequency of testing and the elpased time to the next test against the eGFR result.\\
